# idispatchx

./: .gitignore  .mcp.json  CLAUDE.md  NOTES-TO-SELF.md
.devcontainer/: Dockerfile  allowed-domains.conf  devcontainer.json  init-firewall.sh  install_android_cmdline_tools.sh
Implementation/: README.md  mvnw  mvnw.cmd  pom.xml
Implementation/clients/station-alert-client/: Cargo.toml  Cross.toml
Implementation/clients/station-alert-client/src/: main.rs
SampleData/: L3311F.pgw
Spec/: Containers.md  Containers.puml  Context.md  Context.puml  README.md
Spec/ADR/: ADR-0001-oidc-provider-neutrality.md  ADR-0002-docker-compose-development-ha.md  ADR-0003-partial-ha-testing.md  ADR-0004-shared-reverse-proxy.md  ADR-0005-session-state-during-failover.md  ADR-0006-wal-format-and-semantics.md  ADR-0007-domain-primitives.md  ADR-0008-cad-server-ports-and-adapters.md  ADR-0009-archunit-and-package-visibility.md  ADR-0010-jspecify-nullability-annotations.md  README.md
Spec/C4/: Containers.md  Containers.puml  Context.md  Context.puml  README.md
Spec/Domain/: AlertTarget.md  Call.md  Callsign.md  Incident.md  IncidentType.md  Location.md  MultilingualName.md  Municipality.md  README.md  Staffing.md  Station.md  Unit.md  UnitStatus.md
Spec/NonFunctionalRequirements/: Availability.md  Internationalization.md  Maintainability.md  Performance.md  README.md  Security.md
Spec/Plans/: GIS-Server-Implementation-Plan.md  README.md
Spec/TechnicalDesigns/: CAD-Server-Domain-Core.md  GIS-Data-Import-and-Schema.md  GIS-Server-REST-API.md  README.md
Spec/UseCases/: README.md
(+227 files in other folders)
