[package]
name = "idispatchx-station-alert"
version = "1.0.0"
edition = "2021"
description = "Station alert client for iDispatchX"
license = "Proprietary"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Graphics
minifb = "0.27"
embedded-graphics = "0.8"

# OIDC
openidconnect = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
