[package]
name = "idispatchx-station-alert"
version = "1.0.0"
edition = "2021"
description = "Station alert client for iDispatchX"
license = "Proprietary"

[dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

# Graphics
minifb = "0.28.0"
embedded-graphics = "0.8.1"

# OIDC
openidconnect = "4.0.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[profile.release]
opt-level = 3
lto = true
